--- a/home.html
+++ b/home.html
@@ -3,6 +3,6 @@
  </html>
  <body>
   <h1>informática </h1>
-  <img src=sdvdf"image.jpg"> 
+  <img src="image.jpg"> https://github.com/duduethailan/trabalho-tiago/blob/main/image.jpg?raw=true
  </body>
  </html>
