--- a/home.html
+++ b/home.html
@@ -4,6 +4,6 @@
  <body>
   <h1>informática </h1>
   <img src=asdasda"image.jpg"> https://github.com/duduethailan/trabalho-tiago/blob/main/image.jpg?raw=true
-<p> A Informática é um ramo das ciências da informação e da computação. Estuda os processos de recolha, armazenamento, processamento, transferência e difusão de dados digitais. O termo surgiu da junção das palavras informação e automática e pode ser resumido como o processo de tratamento automático da informação. </p>
+<p> fhfh </p>
  </body>
  </html>
