--- a/home.html
+++ b/home.html
@@ -4,6 +4,6 @@
  <body>
   <h1>informática </h1>
   <img src=asdasda"image.jpg"> https://github.com/duduethailan/trabalho-tiago/blob/main/image.jpg?raw=true
-<p> fhfh </p>
+<p>dfzdfz</p>
  </body>
  </html>
