--- a/home.html
+++ b/home.html
@@ -3,7 +3,6 @@
  </html>
  <body>
   <h1>informática </h1>
-  <img src=asdasda"image.jpg"> https://github.com/duduethailan/trabalho-tiago/blob/main/image.jpg?raw=true
-<p>dfzdfz</p>
+  <img src="image.jpg"> https://github.com/duduethailan/trabalho-tiago/blob/main/image.jpg?raw=true
  </body>
  </html>
