--- a/home.html
+++ b/home.html
@@ -3,6 +3,6 @@
  </html>
  <body>
   <h1>informática </h1>
-  <img src="image.jpg"> 
+  <img src="image.jpg"> https://cptstatic.s3.amazonaws.com/imagens/enviadas/materias/materia25361/redes-de-computadores-uov.jpg
  </body>
  </html>
