--- a/software.html
+++ b/software.html
@@ -3,5 +3,6 @@
 </head>
 <body bgcolor="blue">
 <h1> software</h1>
+<p>São os programas que nos permitem realizar tarefas específicas em um computador. Por exemplo, os sistemas operacionais, aplicativos, navegadores web, jogos entre outros. Esses dois elementos sempre trabalham de mãos dadas. O software orienta o hardware sobre as funções que devem ser realizadas.</p>
 </body>
 </html>
