--- a/hardware.html
+++ b/hardware.html
@@ -3,5 +3,6 @@
  </head>
  <body bgcolor="red">
   <h1> hardware </h1>
+  <p>Hardware é a parte física do computador, ou seja, o conjunto de aparatos eletrônicos, peças e equipamentos que fazem o computador funcionar. A palavra hardware pode se referir também como o conjunto de equipamentos acoplados em produtos que precisam de algum tipo de processamento computacional.</p>
  </body>
  <html>
