--- a/redes.html
+++ b/redes.html
@@ -3,6 +3,7 @@
 </head>
 <body bgcolor="orange">
 <h1> redes </h1>
-<p>Redes de computadores referem-se a dispositivos de computação interconectados que podem trocar dados e compartilhar recursos entre si. Esses dispositivos em rede usam um sistema de regras, chamados de protocolos de comunicação, para transmitir informações por meio de tecnologias físicas ou sem fio.</p>
+<p>Redes de computadores referem-se a dispositivos de computação interconectados que podem trocar dados e compartilhar <br>
+  recursos entre si. Esses dispositivos em rede usam um sistema de regras, chamados de protocolos de comunicação, para transmitir informações por meio de tecnologias físicas ou sem fio.</p>
 </body>
 </html>
