--- a/redes.html
+++ b/redes.html
@@ -9,6 +9,6 @@
 <p> Nós e links são os blocos de construção básicos em redes de computadores. Um nó de rede pode ser um equipamento de comunicação de dados (DCE), como um modem, hub ou switch, ou um equipamento terminal de dados (DTE), como dois ou mais computadores e impressoras. Um link refere-se ao meio de transmissão que conecta dois nós. Os links podem ser físicos, como fios de cabos ou fibras ópticas, ou espaço livre usado por redes sem fio.
 
 Em uma rede de computadores em funcionamento, os nós seguem um conjunto de regras ou protocolos que definem como enviar e receber dados eletrônicos por meio dos links. A arquitetura de rede de computadores define o design desses componentes físicos e lógicos. Ela fornece as especificações para os componentes físicos da rede, organização funcional, protocolos e procedimentos.<p>
-https://www.google.com/url?sa=i&url=https%3A%2F%2Fveigatecnologi.com%2Fmanutencao-redes-computadores%2F&psig=AOvVaw0kiF1Mb0kS3bOPn_fMysO1&ust=1718237687092000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMjDqavk1IYDFQAAAAAdAAAAABAE
+ <img src="image.jpg">https://www.google.com/url?sa=i&url=https%3A%2F%2Fveigatecnologi.com%2Fmanutencao-redes-computadores%2F&psig=AOvVaw0kiF1Mb0kS3bOPn_fMysO1&ust=1718237687092000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMjDqavk1IYDFQAAAAAdAAAAABAE
 </body>
 </html>
